# 1cup-article-pipeline

./: .gitignore  README.md  pyproject.toml
.claude/: settings.json
apps/dashboard/: README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  proxy.ts  tailwind.config.ts  tsconfig.json
apps/dashboard/app/: actions.ts  globals.css  layout.tsx  page.tsx
apps/dashboard/components/: app-nav.tsx  article-ops-dashboard.tsx  article-results-feed.tsx  async-form.tsx  dashboard-auto-refresh.tsx  icons.tsx  kakao-sign-in-button.tsx  latest-collection-card.tsx  panel.tsx  pipeline-runs-client.tsx  pipeline-schedule-form.tsx  review-status-badge.tsx  sign-in-greeting.tsx  sign-in-screen.tsx  translatable-text.tsx
apps/dashboard/lib/: access.ts  article-bot-control.ts  article-dashboard.ts  article-pipeline-store.ts  articles.ts  auth.ts  db.ts  format.ts  runs.ts  runtime.ts  schema-status.ts  (+1 more)
apps/research-bot/: AGENTS.md  README.md
input/: article.txt
scripts/: push-main-and-vercel.sh
src/article_pipeline/: _mlx_lock.py  cli.py  gemma4_backend.py  io.py  logging_utils.py  openai_backend.py  pipeline.py  schemas.py  translator.py
src/crawler/: base.py  browser.py  cli.py  ft.py  media_classifier.py  pipeline_integration.py  schemas.py  storage.py  utils.py  wsj.py
src/local_gemma4/: __init__.py  errors.py  schemas.py  service.py
src/local_gemma4_a4b/: retry.py  schemas.py
src/local_translategemma/: __init__.py  cli.py  doctor.py  errors.py  io.py  logging_utils.py  model_locator.py  progress.py  retry.py  runner.py  schemas.py  service.py
(+33 files in other folders)
